Store completed counts for all processes in job current status
